added elastic search client

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "express": "3.x",
     "mongoskin": "0.6.x",
-    "nodemon": "0.7.x"
+    "nodemon": "0.7.x",
+    "elasticsearchclient":">=0.5.1"
   },
   "devDependencies": {
     "chai": "*",
