--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "chai": "*",
     "mocha": "1.2.x",
     "optimist": "0.6.x"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
   }
 }
